# RedPacketScript

./: Project.py  README.md  main.py  pyproject.toml
red_packet/: __init__.py  main.py
